  * wodim.1 updates, ie. moved suid howto to README.suidroot, Linux bashing to
    README.linux, more notes about non-root usage
  * more carefull description of the role of previous developer and his own
    project
  * fixed libmagic detection
  * rewrote README.mkisofs, README.win32
  * better track numbers extraction command in cdda2ogg/cdda2mp3
  * reenabled (forgotten) support for libedc

  [ Christian Fromme ]
  * detailed review and correction of author related data in manpages and
    README files

  [ Peter Samuelson, Tollef Fog Heen ]
  * typo and grammar fixes in mkisofs.8

 -- Eduard Bloch <blade@debian.org>  Wed,  6 Sep 2006 22:05:30 +0200

cdrkit (1.0pre4) RELEASED; urgency=low

  [ Eduard Bloch ]
  * Added checks for libcam to make (k)FreeBSD compilation work (untested)
  * added clarifications about changes to all source files
  * adapted initial message to display the copyright more clearly
  * adapted copyright and contact information in scgcheck manpage
  * adapted contact information in btcflash manpage, also added a reference to
    its original author which has been missing

  [ Peter Samuelson ]
  * Cleanups: unused macros/defines
  * Unified and simplified the build-host data crawling methods
  
  [ Juergen Weigert ]
  * Various documentation corrections, replaced cdrecord->wodim where it is
    appropriate and legal on many visible locations

 -- Eduard Bloch <blade@debian.org>  Mon,  4 Sep 2006 23:36:58 +0200

cdrkit (1.0pre3) unstable; urgency=low

  [ Eduard Bloch ]
  * Added FAQ ("where wodim name comes from")
  * Moved the NULL pointer check on cdr_t to a place before it is used for DVD
    feature checks (otherwise it would crash when run on any pure CD-ROM
    reader)
  * Added test for WORDS_BIGENDIAN
  * copied values from align.h to another set of sizeof-reflecting defines in
    xconfig.h
  * workarounds for almost all "you are not allowed to modify that {version