@@ -1,5 +1,5 @@
 PROJECT (CDRECORD)
-INCLUDE_DIRECTORIES(../include ../libedc . ${CMAKE_BINARY_DIR})
+INCLUDE_DIRECTORIES(../include ../libedc ${CMAKE_BINARY_DIR})
 INCLUDE(../include/AddScgBits.cmake)
 
 AUX_SOURCE_DIRECTORY(. CDRECORD_SRCS)
