@@ -1,5 +1,5 @@
 PROJECT (LIBSCG)
-INCLUDE_DIRECTORIES(../include .  ${CMAKE_BINARY_DIR}  ../cdrecord)
+INCLUDE_DIRECTORIES(../include ${CMAKE_BINARY_DIR}  ../cdrecord)
 include(../include/AddScgBits.cmake)
 
 #SET(LIBSCG_SRCS rdummy.c scgsettarget.c scgtimes.c scsi-linux-ata.c scsi-linux-pg.c scsi-linux-sg.c scsierrs.c scsihack.c scsihelp.c scsiopen.c scsitransp.c)
